# biofunc

./: .gitignore  LICENSE.txt  TODO.txt  objects.inv  pyproject.toml  readme.md  search.html
.github/workflow/: docs.yml
.github/workflows/: docs.yml
biofunc/: abmindist.py  bed.py  calchet.py  check_align.py  dist.py  het.py  karyogram.py  plot.py  plotmindist.py  tajima.py  vcf.py  vcf_parser.py
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: bed.doctree  environment.pickle  index.doctree
docs/_build/doctrees/pages/: bed.doctree  install.doctree  vcf.doctree
docs/_build/doctrees/test/: test.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  bed.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/pages/: bed.rst.txt  install.rst.txt  vcf.rst.txt
docs/_build/html/_sources/test/: test.rst.txt
docs/_build/html/pages/: bed.html  install.html  vcf.html
docs/_build/html/test/: test.html
docs/_sources/: bed.rst.txt
docs/doctrees/: environment.pickle
docs/html/: bed.html
sphinx/: conf.py
sphinx/_build/doctrees/: bed.doctree  environment.pickle  index.doctree
sphinx/_build/html/: .buildinfo  searchindex.js
test/: VCF_test.py  cyvcf_bench.py  etc.py  record_test.py  test.py  test1.vcf  vcf_parser.py
test/data/: test1.vcf
