[project]
name = "biofunc"
version = "0.1.0"
dependencies = [
    "pandas >=3.0.1",
    "numpy >=2.4.2",
    "matplotlib >=3.10.8",
    "scikit-allel",
    "pysam", 
    "scipy",
    "cyvcf2",
]
requires-python = ">=3.12.3"
authors = [
    {name="Myco Torres", email="myco.torres@gmail.com"}
]
description = "bunch of functions to make bioinformatics easier"
readme = "readme.md"
license = "MIT"
keywords = []
classifiers = []

[project.optional-dependencies]
test = [
    "pytest >=  9.0.2",
    "pytest-cov"
]
doc = [
    "sphinx",
    "shibuya",
    "sphinx-copybutton"
    ]
full = [
    "pytest >=  9.0.2",
    "pytest-cov",
    "sphinx",
    "shibuya",
    "sphinx-copybutton"
]

[project.urls]
Source = "https://github.com/MycoG/biofunc"

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project.scripts]
abmindist = "biofunc.abmindist:main"
plotmindist = "biofunc.plotmindist:main"
calchet = "biofunc.calchet:main"